added shard highlight function

--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,11 @@ canvas{
 .usagecard{
   height:98.5%;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
